[tool.poetry]
name = "dhd2022"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
lightgbm = "^3.3.3"
optuna = "^3.0.4"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
